--- a/final-score/package.json
+++ b/final-score/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "fs": "^0.0.1-security",
     "mssql": "^10.0.2",
     "mysql": "^2.18.1",
